<resources>
    <string name="app_name">ErudY</string>

    <string name="login">Se connecter</string>
    <string name="not_register">Vous n\'avez pas encore de compte?</string>
    <string name="register">S\'enregistrer</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="already_register">Vous avez déjà un compte?</string>

    <string name="text_email">Email :</string>
    <string name="mail_example">bilbon.sacquet@comte.lotr</string>
    <string name="text_password">Mot de passe :</string>
    <string name="confirm_password">Confirmez mot de passe :</string>
    <string name="password_example">********</string>
    <string name="text_firstname">Prénom :</string>
    <string name="firstname_example">Bilbon</string>
    <string name="text_lastname">Nom :</string>
    <string name="lastname_example">Sacquet</string>
    <string name="complete_name_example">Bilbon Sacquet</string>

    <string name="message">Saisir un message</string>
    <string name="my_message">Mon message</string>
    <string name="other_message">Son message</string>

    <string name="published_by">Publié par : </string>
    <string name="request_title_example">Nouveau roi</string>
    <string name="request_content_example">Cavalier banni du Rohan, cherche roi PAS corrompu par Saroumane. Ceci est juste un long text pour tester si le textView wrap correctement le contenu du message</string>
    <string name="request_by">Par Bilbon Sacquet</string>
    <string name="by">Par %s</string>
    <string name="creation_date">le %s</string>
    <string name="text_title">Titre :</string>


    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="title_activity_container">ContainerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_request">Demandes</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="save_profile">Sauvegarder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_image_save">Erreur : Image non sauvegardée…</string>
    <string name="error_register_all_fields">Tous les champs doivent être remplis.</string>
    <string name="error_register_mail_not_valid">L\'adresse mail doit être une adresse valide.</string>
    <string name="error_register_password_short">Le mot de passe doit contenir au moins 8 caractères.</string>
    <string name="error_register_password_not_corresponding">Les mots de passe ne correspondent pas.</string>
    <string name="error_new_request_all_fields">Tous les champs doivent être remplis.</string>

    <string name="confirm_save">Modification enregistrée.</string>
    <string name="start_conversation">Conversation</string>

    <string name="error_save">Error. Try again later.</string>


    <string name="email_sent">Un mail contenant un lien de réinitialisation vous a été envoyé.</string>

</resources>
