<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".presentation.ui.activity.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/text_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_firstname"
        app:layout_constraintBottom_toTopOf="@+id/register_firstname"
        app:layout_constraintStart_toStartOf="@+id/register_firstname" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorWhite"
        android:hint="@string/lastname_example"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhite"
        android:hint="@string/firstname_example"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/text_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_lastname"
        app:layout_constraintBottom_toTopOf="@+id/register_lastname"
        app:layout_constraintStart_toStartOf="@+id/register_lastname" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:hint="@string/mail_example"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/register_lastname"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@+id/register_lastname"
        app:layout_constraintTop_toBottomOf="@+id/register_lastname" />

    <TextView
        android:id="@+id/text_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_promotion"
        app:layout_constraintBottom_toTopOf="@+id/register_promotion"
        app:layout_constraintStart_toStartOf="@+id/register_promotion" />

    <Spinner
        android:id="@+id/register_promotion"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/register_promotion"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/register_promotion"
        app:layout_constraintTop_toBottomOf="@+id/register_promotion" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/new_password"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <TextView
        android:id="@+id/text_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        app:layout_constraintBottom_toTopOf="@+id/new_password"
        app:layout_constraintStart_toStartOf="@+id/new_password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="@+id/register_email" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorYnovGreen"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/confirm_password" />


</androidx.constraintlayout.widget.ConstraintLayout>