<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".presentation.ui.fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firstnameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Jacob "
            app:layout_constraintStart_toStartOf="@+id/firstnameLabel"
            app:layout_constraintTop_toBottomOf="@+id/firstnameLabel" />

        <TextView
            android:id="@+id/firstnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/text_lastname"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="118dp"
            android:layout_height="133dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/default_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/text_firstname"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/firstnameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameField" />

        <TextView
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Jean Sebastien Pierre "
            app:layout_constraintStart_toStartOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="blabla.yoloswag@ynov.com"
            app:layout_constraintStart_toStartOf="@+id/emailLabel"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="46dp"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="6dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_edit"
            android:tint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>